cmake_minimum_required(VERSION 2.8) # ???????? ?????? CMake.
									# ???? ?????? ???????????? ?????????
									# ?????? ????????, ?????????? ????????? ?????.

project(lz4)				# ???????? ???????

set(SOURCE_LIB lz4.c)		# ????????? ?????????? ?? ??????? ??????????

set(EXECUTABLE_OUTPUT_PATH "lib")

add_library(lz4lib STATIC ${SOURCE_LIB})# ???????? ??????????? ??????????